--- a/index.html
+++ b/index.html
@@ -19,19 +19,52 @@
             display: flex;
             gap: 20px;
         }
+
+        .card-number-wrapper {
+            display: flex;
+            gap: 12px;
+            align-items: center;
+        }
+        .copy-icon {
+            width: 16px;
+            height: 16px;
+        }
+        .card-header {
+            display: flex;
+            gap: 8px;
+            align-items: center;
+        }
+        .check-box {
+            width: 28px;
+            height: 28px;
+        }
+        .hidden {
+            display: hidden;
+        }
+        .delete-button {
+            border-radius: 100%;
+            padding: 8px;
+            height: 40px;
+            width: 40px;
+            border-width: 1px;
+            border-color: black;
+            box-shadow: 0 1px 4px 4px rgba(24, 24, 24, 0.057);
+            position: fixed;
+            bottom: 16px;
+            right: 16px;
+        }
     </style>
     <title>Wallet</title>
 </head>
 <body>
-    <div id="backdrop" class="hidden w-full h-full fixed z-10 bg-black opacity-50">
+    <div id="backdrop" class="hidden w-full h-full fixed z-10 bg-black opacity-50"></div>
 
-    </div>
     <header class="w-full px-4 pt-4 flex justify-start">
         <div class="w-full flex justify-between items-center">
             <p class="text-lg font-bold">
                 Wallet App
             </p>
-            <button id="add-button" class="active:bg-gradient-to-b active:from-gray-700 active:to-gray-800 active:text-white text-black border border-black font-bold px-5 py-2 rounded-lg shadow-lg focus:shadow-sm hover:shadow-sm font-sans">
+            <button id="add-button" class="active:bg-gradient-to-b active:from-gray-700 active:to-gray-800 active:text-white text-black text-sm border border-black font-bold px-5 py-2 rounded-lg shadow-lg focus:shadow-sm hover:shadow-sm font-sans">
                 +  Add Card
             </button>
         </div>
@@ -48,13 +81,13 @@
             
                 <div id="card-input-box" class="h-fit w-full p-4 rounded-lg border-black border flex-col space-y-4">
                     <div class="w-full">
-                        <input id="card-name" class="p-2 border-gray-300 border rounded-md w-3/4 font-mono" type="text" placeholder="Card Name" required>
+                        <input id="card-name" class="p-2 border-gray-300 border rounded-md w-3/4 font-mono" type="text" placeholder="Give your card a name." required>
                     </div>
                     <div>
                         <input id="card-number" class="w-full p-2 border-gray-300 border rounded-md font-mono" type="number" required placeholder="Card Number - XXXX XXXX XXXX XXXX">
                     </div>
                     <div>
-                        <input id="card-owner" class="w-full p-2 border-gray-300 border rounded-md font-mono" type="text" required placeholder="Card Owner">
+                        <input id="card-owner-name" class="w-full p-2 border-gray-300 border rounded-md font-mono" type="text" required placeholder="Card Owner Name">
                     </div>
                     <div class="flex gap-2 w-full">
                         <input id="card-month" type="number" class="w-6/12 p-2 border-gray-300 border rounded-md font-mono" required placeholder="Month">
@@ -63,11 +96,11 @@
                     <div class="w-full">
                         <input id="card-cvc" class="w-4/12 p-2 border-gray-300 border rounded-md font-mono" type="number" required placeholder="CVC">
                     </div>
-                </div>
 
-                <button id="save-card" type="submit" class="w-full bg-gradient-to-b from-gray-700 to-gray-800 text-white font-bold px-5 py-3 rounded-lg shadow-lg focus:shadow-sm hover:shadow-sm font-sans">
-                    Save Card Information
-                </button>
+                    <button id="save-card" type="submit" class="w-full bg-gray-900 text-white font-bold px-5 py-3 rounded-lg shadow-lg focus:shadow-sm hover:shadow-sm font-sans">
+                        Save Card Information
+                    </button>
+                </div>
           
         </div>
 
